[gd_scene load_steps=16 format=3 uid="uid://b054tta4vtods"]

[ext_resource type="Script" path="res://main.gd" id="1_kcogd"]
[ext_resource type="PackedScene" uid="uid://dm8ct126nueqj" path="res://mains/CharacterCreation.tscn" id="1_xcqpw"]
[ext_resource type="Shader" path="res://Main.gdshader" id="2_uefjb"]
[ext_resource type="PackedScene" uid="uid://cxysg34fu0j0p" path="res://mains/Gym/Gym.tscn" id="3_8bfyb"]
[ext_resource type="PackedScene" uid="uid://dimpumanogj74" path="res://mains/VictoryRoyale.tscn" id="4_2lv0x"]
[ext_resource type="Script" path="res://color_rect.gd" id="4_l2nl1"]
[ext_resource type="PackedScene" uid="uid://b5pfy5ms7wfon" path="res://mains/EndOfDayScore/Scoring.tscn" id="5_3ldt8"]
[ext_resource type="PackedScene" uid="uid://cop8d1emorwyh" path="res://mains/UpgradeStore/UpgradeStore.tscn" id="7_u6n2w"]
[ext_resource type="AudioStream" uid="uid://cdpw70ti0olsu" path="res://aud/in_game.wav" id="9_phacq"]
[ext_resource type="AudioStream" uid="uid://osm8o3ei8rpi" path="res://aud/groovy_gym.wav" id="10_pku6h"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1tr6i"]
shader = ExtResource("2_uefjb")
shader_parameter/progress = 0.0
shader_parameter/size = 40.0
shader_parameter/fill = true

[sub_resource type="Animation" id="Animation_8wgav"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:transition_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_brvw8"]
resource_name = "transition_in"
length = 0.66667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:transition_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_t6btk"]
resource_name = "transition_out"
length = 0.66667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:transition_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mly0t"]
_data = {
"RESET": SubResource("Animation_8wgav"),
"transition_in": SubResource("Animation_brvw8"),
"transition_out": SubResource("Animation_t6btk")
}

[node name="Main" type="Node2D"]
position = Vector2(0, 3)
script = ExtResource("1_kcogd")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_1tr6i")
custom_minimum_size = Vector2(1152, 648)
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2
color = Color(0, 0, 0, 1)
script = ExtResource("4_l2nl1")

[node name="VictoryRoyale" parent="." instance=ExtResource("4_2lv0x")]
visible = false

[node name="CharacterCreation" parent="." instance=ExtResource("1_xcqpw")]

[node name="Scoring" parent="." instance=ExtResource("5_3ldt8")]
visible = false

[node name="Gym" parent="." instance=ExtResource("3_8bfyb")]
visible = false

[node name="UpgradeStore" parent="." instance=ExtResource("7_u6n2w")]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="TransitionAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mly0t")
}

[node name="Creepy" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_phacq")
volume_db = -19.0

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_pku6h")
volume_db = -8.0

[connection signal="character_created" from="CharacterCreation" to="." method="_on_character_creation_character_created"]
[connection signal="score_finished" from="Scoring" to="." method="_on_scoring_score_finished"]
[connection signal="gym_closed" from="Gym" to="." method="_on_gym_gym_closed"]
[connection signal="upgrade_finished" from="UpgradeStore" to="." method="_on_upgrade_store_upgrade_finished"]
[connection signal="animation_changed" from="TransitionAnimation" to="." method="_on_transition_animation_animation_changed"]
